fixed hero on mobile

--- a/styles/HeroSection.module.css
+++ b/styles/HeroSection.module.css
@@ -445,9 +445,10 @@
     margin-top: 37px;
   }
   .bottomRight {
-    position: static;
+    /* position: static; */
     font-size: 18px;
     margin-top: 20px;
+    position: relative;
   }
 
   .signIn {
@@ -600,6 +601,8 @@
 
   .bottomRight p {
     max-width: 271px;
+    position: relative;
+    z-index: 2000;
   }
 
   /* фон-график чуть ниже, чтобы не перекрывал таймер/кнопку */
