--- a/styles/ResultsSection.module.css
+++ b/styles/ResultsSection.module.css
@@ -46,6 +46,7 @@
   line-height: 110%;
   text-transform: uppercase;
   letter-spacing: -0.02em;
+  z-index: 10;
 }
 
 .title span {
@@ -58,6 +59,7 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
+  z-index: 10;
 }
 
 /* ───────── список ───────── */
@@ -65,6 +67,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  z-index: 10;
 }
 .listRow {
   display: flex;
@@ -100,6 +103,7 @@
 .gif {
   object-fit: cover;
   border-radius: 5px;
+  z-index: 10;
 }
 
 /* ───────── кнопка ───────── */
@@ -108,6 +112,7 @@
   gap: 4px;
   width: 100%;
   height: 56px;
+  z-index: 10;
 }
 .fullTextBtn,
 .fullArrowBtn {
@@ -123,6 +128,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 }
 .fullTextBtn {
   flex: 1;
@@ -364,4 +370,10 @@
 
 .arrowDown {
   transform: rotate(90deg);
+}
+
+@media (max-width: 982px) {
+  .gradient {
+    display: none;
+  }
 }
